--- a/server/index.html
+++ b/server/index.html
@@ -12,7 +12,11 @@
 
 
 <body>
-	<h1>Making a nice view of international cultural groups</h1>
+	<div class = "header">
+		<h1>Visualising international cultural groups</h1>
+		<p>Mouseover each cluster for cluster information</p>
+	</div>
+	
 	<div id = "svg_wrapper">
 		<svg id="my_datavis" height=800 width=800>
 			<g id = "contour_group"> </g>
