--- a/server/index.html
+++ b/server/index.html
@@ -12,6 +12,7 @@
 
 
 <body>
+	<div id = "page_wrapper">
 	<div class = "header">
 		<h1>Visualising international cultural groups</h1>
 		<p>Mouseover each cluster for cluster information. <br>
@@ -60,7 +61,7 @@
 		</div>
 	</div>
 
-	<div class = "footer">
+	<div id = "footer">
 		<div class = "bibliography">
 		<p><b>World Values Survey:</b> Haerpfer, C., Inglehart, R., Moreno, A., Welzel, C., Kizilova, K., Diez-Medrano J., M. Lagos,
 		P. Norris, E. Ponarin & B. Puranen et al. (eds.). 2020. World Values Survey: Round Seven –
@@ -73,6 +74,8 @@
 		</p>
 		</div>
 	</div>
+
+</div>
 </body>
 
 
