--- a/server/index.html
+++ b/server/index.html
@@ -279,11 +279,12 @@ var generateVis = function() {
 	});
 
 	//Tooltip shit
-	d3.select("body")
-	.on("mousemove", function() { 
+	d3.select("svg")
+	.on("mousemove", function() {
+		var body = document.getElementsByTagName("body")[0];
 		d3.select("#tooltip_wrapper")
-		.style("top", d => (d3.mouse(this)[1] + 20) + "px")
-		.style("left", d => (d3.mouse(this)[0] + 20) + "px")
+		.style("top", d => (d3.mouse(body)[1] + 20) + "px")
+		.style("left", d => (d3.mouse(body)[0] + 20) + "px")
 
 	})
 
